; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cassette.c_CASSETTE_GetSize.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cassette.c_CASSETTE_GetSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cassette_file = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CASSETTE_GetSize() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @cassette_file, align 8
  %3 = icmp eq i32* %2, null
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %8

5:                                                ; preds = %0
  %6 = load i32*, i32** @cassette_file, align 8
  %7 = call i32 @IMG_TAPE_GetSize(i32* %6)
  store i32 %7, i32* %1, align 4
  br label %8

8:                                                ; preds = %5, %4
  %9 = load i32, i32* %1, align 4
  ret i32 %9
}

declare dso_local i32 @IMG_TAPE_GetSize(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
